--- a/index.html
+++ b/index.html
@@ -1,12 +1,94 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的 GitHub 个人网站</title>
+    <title>Xinyi Wang - Personal Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #0077cc;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #005fa3;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            font-weight: bold;
+        }
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #0077cc;
+            color: white;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>欢迎来到我的个人网站！</h1>
-    <p>这是我的 GitHub Pages 主页。</p>
+    <header>
+        <h1>Xinyi Wang</h1>
+        <p>Master's Student | AI Researcher | Developer</p>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#education">Education</a>
+        <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container" id="home">
+        <h2>Welcome</h2>
+        <p>Hi! I am Xinyi Wang, a master's student in AI and computer science, passionate about large language models, NLP, and deep learning research.</p>
+    </div>
+    <div class="container" id="education">
+        <h2>Education</h2>
+        <p><strong>Politecnico di Milano</strong> (MSc in Industrial and Information Engineering, since 2024)</p>
+        <p><strong>Harbin Institute of Technology</strong> (Master of Engineering in Computer Science, since 2023)</p>
+        <p><strong>Huazhong University of Science and Technology</strong> (BSc in Automation & AI, 2019-2023)</p>
+    </div>
+    <div class="container" id="projects">
+        <h2>Projects</h2>
+        <p><strong>Embodied AI</strong>: Research on multimodal large language models in task planning.</p>
+        <p><strong>Social Media Agents</strong>: Research on large language model inference and fine-tuning.</p>
+    </div>
+    <div class="container" id="experience">
+        <h2>Experience</h2>
+        <p><strong>Research Intern</strong>, SINA Corporation (Dec. 2023 - Mar. 2024)</p>
+        <p>Worked on text classification and data mining.</p>
+        <p><strong>Student Intern</strong>, Intelligent Manufacturing and Data Science Lab (2021-2022)</p>
+        <p>Research on industrial signal processing and deep learning.</p>
+    </div>
+    <div class="container" id="contact">
+        <h2>Contact</h2>
+        <p>Email: w1958002973@gmail.com</p>
+        <p>Location: Milan, Italy</p>
+    </div>
+    <footer>
+        <p>&copy; 2025 Xinyi Wang. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
